<resources>
    <string name="app_name">Vueddit2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_refresh">Refresh</string>
    <string name="posts_list">Posts</string>
    <string name="search_hint">Search for subreddit</string>
    <string name="menu_show_sidebar">Show sidebar</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_user_profile">Goto user profile</string>
    <string name="menu_toggle_big_post_preview">Toggle post preview size</string>
    <string name="user_posts_list">User posts list</string>
    <string name="menu_remove_visited">Remove from visited subreddits</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="subscribe_confirm">Do you really want to subscribe to "/r/%s"</string>
    <string name="unsubscribe_confirm">Do you really want to unsubscribe from "/r/%s"</string>
    <string name="unsubscribe">Unsubscribe from "/r/%s"</string>
    <string name="subscribed">Subscription was added</string>
    <string name="unsubscribed">Subscription was removed</string>
    <string name="removed_from_visited">"/r/%s" was removed from visited subreddits</string>
    <string name="showing">Showing </string>
    <plurals name="num_comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <plurals name="showing_num_comments">
        <item quantity="one">Showing %d comment</item>
        <item quantity="other">Showing %d comments</item>
    </plurals>
    <string name="comment_done">Done</string>
    <string name="comment_hide">Hide</string>
    <string name="comment_more">More</string>
    <string name="comment_prev">▲ Prev</string>
    <string name="comment_next">Next ▼</string>
    <string name="comment_parent">▲ Parent</string>
    <string name="comment_root">▲ Root</string>
    <plurals name="num_upvotes">
        <item quantity="one">%d point</item>
        <item quantity="other">%d points</item>
    </plurals>
    <plurals name="num_children">
        <item quantity="one">%d child</item>
        <item quantity="other">%d children</item>
    </plurals>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="upvote_arrow">▲</string>
    <string name="downvote_arrow">▼</string>
    <string name="vote_count">0</string>
    <string name="spoiler">spoiler</string>
    <string name="nsfw">nsfw</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="goto_user">Goto /u/%s</string>
    <string name="goto_sub">Goto /r/%s</string>
    <string name="go_back_to">Go back to %s</string>
    <string name="no_sidebar">No sidebar available</string>
</resources>