<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sidebar"
        android:orderInCategory="110"
        android:title="@string/menu_show_sidebar" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="150"
        android:title="@string/save" />

    <item
        android:id="@+id/action_goto_subreddit"
        android:orderInCategory="200"
        android:title="@string/goto_sub" />

    <item
        android:id="@+id/action_goto_user"
        android:orderInCategory="300"
        android:title="@string/goto_user" />

</menu>