<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sidebar"
        android:orderInCategory="110"
        android:title="@string/menu_show_sidebar" />

    <item
        android:id="@+id/action_toggle_big_preview"
        android:orderInCategory="160"
        android:title="@string/menu_toggle_big_post_preview" />

    <item
        android:id="@+id/action_user_posts"
        android:orderInCategory="180"
        android:title="@string/menu_user_profile" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/menu_logout" />
</menu>