<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/upvote"
        android:focusable="true"
        android:text="@string/upvote_arrow"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_count"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/downvote"
        android:focusable="true"
        android:text="@string/downvote_arrow"
        android:textSize="14sp" />
</LinearLayout>